Fixed scrollspy spacing

--- a/lure_app/www/css/app.css
+++ b/lure_app/www/css/app.css
@@ -26,11 +26,14 @@
   border: none;
   color: black;
   font-weight: 400;
-  line-height:1em;
-  height: 30px;
+  line-height: 1.2em;
+  height: 35px;
   margin-bottom: 0px;
   display: block;
   border-right: 3px solid #DCDCDC;
+  margin-bottom: -2px;
+  margin-top: -2px;
+  font-size: 105%;
 }
 #tab1-scrollspy li > a:hover {
   color: #1b8fc1 !important;
@@ -46,7 +49,7 @@
 }
 
 #tab1-content .active-scrollspy {
-  margin-top: 60px;
+  margin-top: 59px;
 }
 
 #tab1-content .nav.nav-pills.nav-stacked {
